@@ -2,7 +2,7 @@ import com.diffplug.gradle.spotless.SpotlessExtension
 
 val mvnGroupId = "io.github.wcarmon"
 val mvnArtifactId = "otel-utils-jvm" // see settings.gradle.kts
-val mvnVersion = "1.0.3"
+val mvnVersion = "1.0.4"
 
 val ossrhPassword: String = providers.gradleProperty("ossrhPassword").getOrElse("")
 val ossrhUsername: String = providers.gradleProperty("ossrhUsername").getOrElse("")
@@ -29,12 +29,14 @@ configure<JavaPluginExtension> {
 }
 
 dependencies {
-    implementation("org.jetbrains:annotations:24.1.0")
+
+    // NOTE: uncomment if you use lombok
+    // annotationProcessor("org.projectlombok:lombok:1.18.30")
+    // compileOnly("org.projectlombok:lombok:1.18.30")
 
     implementation("io.opentelemetry:opentelemetry-api:1.33.0")
     implementation("io.opentelemetry:opentelemetry-sdk:1.33.0")
-    implementation("org.apache.logging.log4j:log4j-core")
-    implementation("org.apache.logging.log4j:log4j-core:2.22.0")
+    implementation("org.jetbrains:annotations:24.1.0")
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.1")
     testImplementation("org.junit.jupiter:junit-jupiter-engine:5.10.1")
@@ -50,6 +52,22 @@ dependencies {
 java {
     withJavadocJar()
     withSourcesJar()
+}
+
+tasks.withType<Test>().configureEach {
+
+    jvmArgs("--enable-preview")
+
+    failFast = true // marks others after failure as ignored
+    useJUnitPlatform {
+        excludeTags.add("e2e")
+    }
+
+    testLogging {
+        events("passed", "skipped", "failed", "standardOut", "standardError")
+        showExceptions = true
+        showStandardStreams = true
+    }
 }
 
 publishing {
